bootstrap/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/name: kube-prometheus-stack-prometheus
  name: kube-prometheus-stack-prometheus
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: prometheus.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              name: http-web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - prometheus.scottseo.tech
    secretName: scottseo-tech-tls-prometheus
